# market-dashboard

./: .gitignore  DECISIONS.md  SESSION_LOG.md  investigate_positions.py  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
local/: launch.bat  local_app.py
local/pages/: 1_Performance.py  2_Portfolios.py  3_Transactions.py  4_Trade Evaluation.py
pages/: 1_Performance.py  1_Portfolio.py  3_Portfolios.py  3_Transactions.py
scripts/: check_port.ps1  check_processes.ps1  debug_oust.py  debug_residual.py  debug_twr.py  kill_port.ps1  migrate_cash.py  migrate_redate_sweeps.py  rebuild_check.py  test_cash.py
src/market_dashboard/: config.py  poller.py
src/market_dashboard/dashboard/: app.py  history_fetcher.py
src/market_dashboard/database/: connection.py  queries.py
src/market_dashboard/portfolio/: eodhd_prices.py  fifo.py  metrics.py  models.py  page.py  parsers.py  pdf_parser.py  portfolios_page.py  prices.py  queries.py  schema.py  snapshots.py  tx_page.py  what_if.py
tests/: conftest.py  test_config.py  test_fifo.py  test_metrics.py  test_multi_portfolio.py  test_parsers.py  test_pdf_parser.py  test_poller.py  test_portfolio_integration.py  test_prices.py  test_snapshots.py  test_tx_queries.py
