[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "market-dashboard"
version = "0.1.0"
description = "Live market dashboard — weighted ETF groups with color-coded daily changes"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2.36",
    "streamlit>=1.36",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/market_dashboard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
src = ["src"]
line-length = 99
